Окна listing page

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,28 @@
     <meta charset="utf-8">
     <!--!title-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- 🔹 Favicons -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+
+    <!-- Open Graph -->
+<meta property="og:title" content="Сервис для поиска специалистов в ОАЭ" />
+<meta property="og:description" content="Найдите надежного исполнителя для любой задачи!" />
+<meta property="og:image" content="https://youdu.ae/og-banner.png" />
+<meta property="og:url" content="https://youdu.ae" />
+<meta property="og:type" content="website" />
+
+
+
+
+
     <!--!meta-->
+
+
 
     <!-- Favicons and app icons -->
     <!-- If you want more control, you can create icons using https://realfavicongenerator.net/ and remove generated webmanifest from the server and Page -->
