✨ Синхронизация категорий с Sharetribe и улучшение UI регистрации
🔧 Основные изменения:
- Синхронизированы все 14 категорий и 92 подкатегории с Sharetribe Console
- Обновлены ID категорий в serviceCategories.js (repairs_main, Beauty_health, и т.д.)
- Обновлены ссылки на категории на главной странице

🎨 UI улучшения:
- Адаптирован ServiceCategorySelector под стиль YouDu
- Компактный дизайн карточек категорий
- Эмодзи-иконки для категорий
- Простые чекбоксы для выбора подкатегорий (без hover эффектов)
- Добавлен SubcategoryFilter для страницы категорий

⚡ Оптимизация:
- Lazy loading для Stripe и Google Maps
- Удалены debug логи
- Удалены компоненты портфолио (отменены изменения)

📝 Файлы:
- src/config/serviceCategories.js - полная синхронизация с Console
- src/components/ServiceCategorySelector/* - новый UI
- src/components/SubcategoryFilter/* - фильтр подкатегорий
- src/containers/LandingPage/LandingPage.js - обновлены ID категорий
- src/hooks/useStripe.js, useGoogleMaps.js - lazy loading хуки
- src/util/loadScript.js - утилита для динамической загрузки скриптов

--- a/public/index.html
+++ b/public/index.html
@@ -72,12 +72,9 @@
     <div id="portal-root"></div>
 
     <!--
-         Stripe script should be on every page, not just the pages that
-         use the API:
-
-         https://stripe.com/docs/stripe.js#including-stripejs
+         Stripe script is now loaded lazily only on pages that need it
+         (CheckoutPage, PaymentMethodsPage, StripePayoutPage)
        -->
-    <script src="https://js.stripe.com/v3/" crossorigin></script>
     <!--!preloadedStateScript-->
 
     <!--!ssrScripts-->
